# big_data_final_project

./: .env  .gitignore  Cleaning_missing_handling.ipynb  Dockerfile  LICENSE  Makefile  README.md  checks.ipynb  docker-compose.yaml  imdb_model_test_nicola.ipynb  imdb_model_test_nicola_v2.ipynb  predictions_martin.ipynb  predictions_martin_updated.ipynb  pyproject.toml
data/: directing.parquet  test_hidden.parquet  train-1.parquet  train-2.parquet  train-3.parquet  train-4.parquet  train-5.parquet  train-6.parquet  train-7.parquet  train-8.parquet  validation_hidden.parquet  writing.parquet
data_parquet/: directing.parquet  test_hidden.parquet  train-1.parquet  train-2.parquet  train-3.parquet  train-4.parquet  train-5.parquet  train-6.parquet  train-7.parquet  train-8.parquet  validation_hidden.parquet  writing.parquet
data_transformations/: dbt_project.yml  profiles.yml
data_transformations/models/: sources.yml  test_configuration.yml
data_transformations/models/data_views/: aggregated_crew_experience.sql  clean_test_data.sql  clean_training_data.sql  clean_validation_data.sql  combined_training_data.sql  crew_experience.sql  movie_year.sql
data_transformations/models/raw_data/: directing_raw.sql  test_data_raw.sql  training_data_raw.sql  validation_data_raw.sql  writing_raw.sql
data_transformations/orchestration/: setup.py
data_transformations/tests/: end_range_smaller_than_start_range.sql
distributed_model_training/: dist_training.ipynb
experiments/: experiments.ipynb
ingestion/: ingest.py  training_data_ingestors.py  validation.py
predictions/: test_hidden_martin.txt  test_predictions_final.txt  test_predictions_genre.txt  test_predictions_nicola.txt  valid_predictions_final.txt  valid_predictions_genre.txt  valid_predictions_nicola.txt  validation_hidden_martin.txt
readers/: readers.py
tmdb_api/: tmdb_requests.ipynb
utils/: command_line_args.py
wiki_data/: imdb_model_test_nicola_v3_wiki.ipynb  readme.txt  wiki_data_clean.csv  wiki_scraping.ipynb
(+8 files in other folders)
