[tool.poetry]
name = "big-data"
version = "0.1.0"
description = "Dependencies for the Big Data Project at UvA, class 2024."
authors = ["mlad-en <downloadsquish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
pydantic = "^2.6.3"
notebook = "^7.1.1"
pandera = "^0.18.0"
duckdb = "^0.10.0"
dbt-duckdb = "^1.7.2"
fire = "^0.5.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
black = "^24.2.0"
ipython-sql = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
