[tool.poetry]
name = "big-data"
version = "0.1.0"
description = "Dependencies for the Big Data Project at UvA, class 2024."
authors = ["mlad-en <downloadsquish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.6.3"
notebook = "^7.1.1"
pandera = "^0.18.0"
duckdb = "^0.10.0"
dbt-duckdb = "^1.7.2"
fire = "^0.5.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
black = "^24.2.0"
ipython-sql = "^0.5.0"
unidecode = "^1.3.8"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
dagster-dbt = "^0.22.8"
dagster-webserver = "^1.6.8"
dask = "^2024.3.1"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"


[tool.dagster]
module_name = "data_transformations.orchestration.orchestration.definitions"
code_location_name = "orchestration"
